--- a/omoide.css
+++ b/omoide.css
@@ -1,5 +1,4 @@
-@media screen and (min-width:700px) {
-    /*ウィンドウ幅が767px以上の場合に適用*/
+
 
 
 
@@ -36,6 +35,22 @@
     .smh{
         display: none;
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     /*mainvisual*/
     li {
         float: left;
@@ -116,6 +131,7 @@
         left: 50%;
         -webkit-transform: translateY(-50%) translateX(-50%);
         transform: translateY(-50%) translateX(-50%);
+        margin-top: 30px;
     }
 
     .logoshousai p {
@@ -135,11 +151,62 @@
         text-align: center;
     }
 
+.tumo{
+    margin: 0 auto;
+    margin-bottom:-20px;
+    text-align: center;
+    margin-top: -500px;
+    overflow: hidden;
+    
+}
+
     /*menber*/
     #menber {
         background-color: #DDDDDD;
+        padding-top: 200px;
     }
+.iei{
+    
+      width: 90%;
+    display:flex;
+   display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: flex;
+        -webkit-box-lines: multiple;
+        -moz-box-lines: multiple;
+        -webkit-flex-wrap: wrap;
+        -moz-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        justify-content: center;
+        z-index: 3;
+   
+    text-align: center;
+     padding-top: 80px;
+    padding-bottom:80px;
+}
+.iei_box{
+     width: 90%;
+   margin: 0 auto;
+     text-align: center;
+    margin-right:0;
+    padding: 50px auto;
+}
+.iei img{
+  
+    margin: 10px 20px;
+     flex-shrink: 0;
+       height: 180px;
+       
+        z-index: 3;
+}
 
+.iei{
+     margin-right:0;
+}
     /*  about  */
     #about {
         background-color: #DDDDDD;
@@ -148,95 +215,117 @@
         padding-bottom: 170px;
     }
 
+
+
+
+@media screen and (min-width: 800px) { 
     .contents {
-        width: 1000px;
-           height: 720px;
+        width: 800px;
+           height: 570px;
         background-color: #FFF;
         margin: 0 auto;
 position: relative;
         border-radius: 12px;
+        margin-top: 100px;
        
     }
-    
+    }
 
     h1 {
         font-family: 'dot';
         font-size: 47px;
         text-align: center;
          font-weight: normal;
+        
+    }
+
+ .about h1 {
+   
     }
 
     .text { 
-        padding-top: 120px;
-        padding-left: 550px;
+        padding-top: 100px;
+        padding-left: 430px;
     }
 
     .intro_img img {
         float: left;
         overflow: hidden;
-        margin-top: 60px;
-        margin-left: 70px;
+        margin-top: 30px;
+        margin-left: 40px;
     }
     .r0 p{
         font-family: 'hannari';
-        font-size: 33px;
+        font-size: 27px;
     }
      .r1 p{
-        font-size: 26px;
+        font-size: 19px;
     }
     .bold {
    font-size: 20px;
         margin-left: 10px;
 }
      .r2 p{
-        font-size: 18px;
+        font-size: 11px;
 letter-spacing:5px;
          margin-top: 12px;
          margin-bottom: 20px;
     }
     .r3 p{
-        font-size: 25px;
+        font-size: 18px;
     }
     
     .r4 {margin-top: 10px;}
       .r4 p{
-        font-size: 22px;
+        font-size: 18px;
           text-decoration: none;
           
     }
       .r4 a{
-        font-size: 22px;
+        font-size: 18px;
           text-decoration: none;
           color: #18BC3B;
           
     }
 
       .r5 p{
-        font-size: 16px;
+        font-size: 15px;
           margin-top: 80px;
           margin-bottom: -20px;
     }
       .r6 a{
-        font-size: 14px;
+        font-size: 12px;
           text-decoration: none;
           color: #18BC3B;
     }
+
+
+@media screen and (min-width: 800px) { 
     .rellax1{
      
         position: absolute;
-        top:-90px;
-        left:840px;
+        top:-290px;
+        left:740px;
          z-index: 100px;
     }
      .rellax1 img{
  width: 30vw;
+         min-width: 170px;
+        
+    }
+.rellax2 img{
+ width: 17vw;
+     min-width: 200px;
     }
     .rellax2 {
         position: absolute;
-        top:470px;
-        right:1020px;
+        top:270px;
+        left:-200px;
         z-index: 100px;
+      
+        
     }
+}
     /*access*/
     #access {
         background-color: #2A2A2A;
@@ -277,3 +366,72 @@ letter-spacing:5px;
      
     }
    iframe{padding-top: 190px;}
+
+
+* {
+  box-sizing: border-box;
+  }
+
+/* ポップアップウインドウの設定 */
+.popup {
+  background-color: #efefef;
+ 
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 70vw;
+  height: 55vw;
+  overflow-y: scroll;
+}
+/* チェックボックスの初期設定 */
+#popup-on{
+  display: none;
+}
+/* チェックされたらポップアップウインドウを開く */
+#popup-on:checked + .popup{
+  display: block;
+}
+
+/* 閉じるアイコン（右上） */
+.icon-close{
+  background: #000;
+  color: #fff;
+  font-size: 30px;
+  padding: 0 10px;
+  position: absolute;
+  right: 0;
+}
+
+/* 閉じるボタン */
+.btn-close{
+  background: #000;
+  border-radius: 10px;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+  margin: 10px auto;
+  width: 95%;
+  text-align: center;
+}
+
+/* 開くボタン */
+.btn-open{
+ 
+  border-radius: 10px;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+  margin: 10px auto;
+  width: 95%;
+  text-align: center;
+}
+
+/* ポップアップの内容 */
+.popup-content{
+  margin: 40px auto 40px auto;
+  width: 90%;
+}
