--- a/omoide.css
+++ b/omoide.css
@@ -89,9 +89,13 @@
 
 
     .glitch {
-        overflow: hidden;
-        position: relative;
-        height: 1000px;
+        position: absolute;
+        z-index: -1;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translateY(-50%) translateX(-50%);
+        transform: translateY(-50%) translateX(-50%);
+        margin-top: 30px;
     }
 
     #mainv img {
@@ -142,15 +146,28 @@
     #poem {
         background-color: #000;
         margin-top: -10px;
+       
+      
     }
+
+@media screen and (min-width: 800px) { 
+.test{
+       
+        
+        width: 800px;
+        margin: 0 auto;
+      text-align: center;
+    }
+
 
     .small {
         padding-top: 100px;
         font-family: 'kokoro';
         line-height: 120px;
         text-align: center;
-    }
 
+    }
+}
 .tumo{
     margin: 0 auto;
     margin-bottom:-20px;
@@ -320,7 +337,7 @@ letter-spacing:5px;
     .rellax2 {
         position: absolute;
         top:270px;
-        left:-200px;
+        left:-120px;
         z-index: 100px;
       
         
