--- a/omoide_s.css
+++ b/omoide_s.css
@@ -250,7 +250,7 @@ li {
      width: 90%;
    margin: 0 auto;
      text-align: center;
-    margin-right:0;
+  
 }
 .iei img{
   height: 120px;
@@ -262,7 +262,7 @@ li {
 }
 
 .iei{
-     margin-right:0;
+    margin: 0 auto;
 }
     /*  about  */
     #about {
