--- a/omoide_s.css
+++ b/omoide_s.css
@@ -146,7 +146,7 @@ li {
     left: 50%;
     -webkit-transform: translateY(-50%) translateX(-50%);
     transform: translateY(-50%) translateX(-50%);
-    
+
     margin-top: -63px;
 
 }
@@ -209,72 +209,77 @@ li {
 }
 
 
-.tumo{
+.tumo {
     height: 600px;
     margin: 0 auto;
-    margin-bottom:-20px;
+    margin-bottom: -20px;
     text-align: center;
     margin-top: -300px;
     overflow: hidden;
-    
+
 }
+
 /*menber*/
 #menber {
     background-color: #DDDDDD;
-    
+
 }
 
-#menber h1{
+#menber h1 {
     margin-top: -140px;
     margin-bottom: 0px;
 }
-.iei{
-    
-      width: 90%;
-    display:flex;
-   display: -webkit-box;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: -moz-flex;
-        display: flex;
-        -webkit-box-lines: multiple;
-        -moz-box-lines: multiple;
-        -webkit-flex-wrap: wrap;
-        -moz-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        justify-content: center;
-        z-index: 3;
-   
+
+.iei {
+
+    width: 90%;
+    display: flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    justify-content: center;
+    z-index: 3;
+
     text-align: center;
 }
-.iei_box{
-     width: 90%;
-   margin: 0 auto;
-     text-align: center;
-  
-}
-.iei img{
-  height: 120px;
-    margin: 0px 4px;
-     flex-shrink: 0;
-        flex-basis: 130px;
-       
-        z-index: 3;
+
+.iei_box {
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+
 }
 
-.iei{
+.iei img {
+    height: 120px;
+    margin: 0px 4px;
+    flex-shrink: 0;
+    flex-basis: 130px;
+
+    z-index: 3;
+}
+
+.iei {
     margin: 0 auto;
 }
-    /*  about  */
-    #about {
-        background-color: #DDDDDD;
-        position: relative;
-        font-family: 'kokoro';
-        padding-bottom: 170px;
-        padding-top: 80px;
-    }
+
+/*  about  */
+#about {
+    background-color: #DDDDDD;
+    position: relative;
+    font-family: 'kokoro';
+    padding-bottom: 170px;
+    padding-top: 80px;
+}
 
 
 
@@ -313,7 +318,7 @@ li {
     border-radius: 0px;
     width: 73%;
     height: 120vw;
-   margin-bottom: -20%;
+    margin-bottom: -20%;
 
 
 
@@ -321,8 +326,8 @@ li {
 
 
 .right-box {
-   
-padding-top: 12%;
+
+    padding-top: 12%;
 }
 
 h1 {
@@ -332,26 +337,27 @@ h1 {
     font-weight: normal;
 }
 
-#about h1{
+#about h1 {
     margin-bottom: 30px;
 }
 
 .text {
-    
-  width: 280px;
+
+    width: 280px;
     margin: 0 auto;
     border-radius: 0px;
-    margin-top:20%;
+    margin-top: 20%;
     padding: 0px;
 
 }
 
-.lefto{
+.lefto {
     margin: 30px;
     margin-top: 0;
 }
-.centero{
-    
+
+.centero {
+
     text-align: center;
     padding-top: -20px;
 }
@@ -364,22 +370,22 @@ h1 {
 
 .r1 p {
     font-size: 4vw;
-     text-align: center;
+    text-align: center;
 }
 
 .bold {
     font-size: 3vw;
-    
+
 }
 
 .r2 p {
     font-size: 2vw;
- 
+
 }
 
 .r3 p {
     font-size: 3.3vw;
-  
+
 }
 
 .r4 {
@@ -393,32 +399,32 @@ h1 {
     font-size: 2vw;
     text-decoration: none;
     color: #000;
- padding: 4px 6px;
-  background-color: #fff;
-  
-  box-shadow: 3px 3px 0px 0px #00ff00;    
+    padding: 4px 6px;
+    background-color: #fff;
+
+    box-shadow: 3px 3px 0px 0px #00ff00;
 }
 
 
-.r5{
-   margin-top: -10px;
+.r5 {
+    margin-top: -10px;
 }
 
 .r5 a {
     font-size: 2vw;
-     text-decoration: none;
+    text-decoration: none;
     color: #000;
- padding: 4px 6px;
-  background-color: #fff;
-  
-  box-shadow: 3px 3px 0px 0px #00ff00;  
+    padding: 4px 6px;
+    background-color: #fff;
+
+    box-shadow: 3px 3px 0px 0px #00ff00;
 }
 
 .rellax1 {
-font: right;
-      position: absolute;
+    font: right;
+    position: absolute;
     top: -970px;
-   right: 10px;
+    right: 10px;
     z-index: 100px;
 }
 
@@ -451,15 +457,15 @@ font: right;
     color: #DDDDDD;
 }
 
-.tizu {
-    width: 300px;
-    margin: 0 auto;
-    position: relative;
-    height: 500px;
 
-}
 
-#access h1 {
+
+
+@media screen and (max-width: 800px) {
+
+
+    
+    #access h1 {
     color: #00FF00;
     padding-top: 50px;
 }
@@ -479,24 +485,161 @@ font: right;
     top: 152px;
     right: 5px;
     font-size: 10px;
+
+    text-decoration: none;
+
+}
+
+.ac2 a {
+    color: #fff;
+    text-decoration: none;
+
+}
+
     
-text-decoration:none;
+
+    .tizu {
+        width: 500px;
+        margin: 0 auto;
+        position: relative;
+        height: 500px;
+
+    }
+
+
+
+    iframe {
+        padding-top: 120px;
+        width: 500px;
+        height: 500px;
+        text-align: center;
+        margin: 0 auto;
+    }
+    
+    
+    
+    .tatea p {
+        writing-mode: vertical-rl;
+        color: #00FF00;
+
+        font-size: 4vw;
+    }
+
+    .tatea {
+        top: 20px;
+        right: 10px;
+        top: 3100px;
+        position: absolute;
+    }
+
+    .tatea p {
+        display: block;
+    }
+    
+    
+    
+    .tatem p{writing-mode:vertical-rl;
+        color: #00FF00;
+        
+ font-size: 5vw;
+    }
+    
+    .tatem{  top:420%;
+        left: 10px;
+        position: absolute;}
+    
+
 
 }
 
-.ac2 a{
-color: #fff;
-text-decoration:none;
+@media screen and (max-width: 500px) {
+
+
+
+    .tizu {
+        width: 250px;
+        margin: 0 auto;
+        position: relative;
+        height: 500px;
+
+    }
+
+
+    iframe {
+        padding-top: 120px;
+        width: 250px;
+        height: 400px;
+        text-align: center;
+        margin: 0 auto;
+    }
+
+
+    .tatea p {
+        writing-mode: vertical-rl;
+        color: #00FF00;
+
+        font-size: 3vw;
+    }
+
+    .tatea {
+        
+        right: 60px;
+        top: 510%;
+        position: absolute;
+    }
+
+    .tatea p {
+        display: none;
+    }
+    
+    
+    
+    .tatem p{writing-mode:vertical-rl;
+        color: #00FF00;
+        
+ font-size: 5vw;
+    }
+    
+    .tatem{  top:1670px;
+        left: 14px;
+        position: absolute;}
+
+.ac1 {
+    font-family: 'kokoro';
+    position: absolute;
+    top: 159px;
+    left: 0;
+    font-size: 11px;
 
 }
 
-iframe {
-    padding-top: 120px;
-    width: 300px;
-    height: 400px;
-    text-align: center;
-    margin: 0 auto;
+.ac2 {
+    font-family: 'kokoro';
+    position: absolute;
+    top: 152px;
+    right: 5px;
+    font-size: 7px;
+
+    text-decoration: none;
+
 }
+
+.ac2 a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 7px;
+
+}
+
+    
+
+}
+
+
+
+
+
+
 
 
 /*kousin*/
@@ -513,69 +656,71 @@ iframe {
 }
 
 * {
-  box-sizing: border-box;
-  }
+    box-sizing: border-box;
+}
 
 /* ポップアップウインドウの設定 */
 .popup {
-  background-color: #efefef;
- 
-  display: none;
-  position: fixed;
-  top: 10;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  width: 70vw;
-  height: 55vw;
-  overflow-y: scroll;
+    background-color: #efefef;
+
+    display: none;
+    position: fixed;
+    top: 10;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 70vw;
+    height: 55vw;
+    overflow-y: scroll;
 }
+
 /* チェックボックスの初期設定 */
-#popup-on{
-  display: none;
+#popup-on {
+    display: none;
 }
+
 /* チェックされたらポップアップウインドウを開く */
-#popup-on:checked + .popup{
-  display: block;
+#popup-on:checked + .popup {
+    display: block;
 }
 
 /* 閉じるアイコン（右上） */
-.icon-close{
-  background: #000;
-  color: #fff;
-  font-size: 30px;
-  padding: 0 10px;
-  position: absolute;
-  right: 0;
+.icon-close {
+    background: #000;
+    color: #fff;
+    font-size: 30px;
+    padding: 0 10px;
+    position: absolute;
+    right: 0;
 }
 
 /* 閉じるボタン */
-.btn-close{
-  background: #000;
-  border-radius: 10px;
-  color: #fff;
-  padding: 10px;
-  cursor: pointer;
-  margin: 10px auto;
-  width: 95%;
-  text-align: center;
+.btn-close {
+    background: #000;
+    border-radius: 10px;
+    color: #fff;
+    padding: 10px;
+    cursor: pointer;
+    margin: 10px auto;
+    width: 95%;
+    text-align: center;
 }
 
 /* 開くボタン */
-.btn-open{
- 
+.btn-open {
 
- 
 
-  cursor: pointer;
-  margin: 3px auto;
-  width: 90%;
-  text-align: center;
+
+
+    cursor: pointer;
+    margin: 3px auto;
+    width: 90%;
+    text-align: center;
 }
 
 /* ポップアップの内容 */
-.popup-content{
-  margin: 40px auto 40px auto;
-  width: 90%;
+.popup-content {
+    margin: 40px auto 40px auto;
+    width: 90%;
 }
