--- a/omoide.css
+++ b/omoide.css
@@ -90,7 +90,7 @@ body{
     }
 
 
-    .glitch {
+    .gl {
         position: absolute;
         z-index: -1;
         top: 50%;
@@ -99,6 +99,173 @@ body{
         transform: translateY(-50%) translateX(-50%);
         margin-top: 30px;
     }
+
+
+glitch {
+  color: white;
+  font-size: 40px;
+  position: relative;
+  width: 400px;
+  margin: 0 auto;
+}
+
+@keyframes noise-anim {
+  0% {
+    clip: rect(77px, 9999px, 6px, 0);
+  }
+  5% {
+    clip: rect(65px, 9999px, 70px, 0);
+  }
+  10% {
+    clip: rect(82px, 9999px, 82px, 0);
+  }
+  15% {
+    clip: rect(32px, 9999px, 35px, 0);
+  }
+  20% {
+    clip: rect(31px, 9999px, 49px, 0);
+  }
+  25% {
+    clip: rect(18px, 9999px, 46px, 0);
+  }
+  30% {
+    clip: rect(94px, 9999px, 64px, 0);
+  }
+  35% {
+    clip: rect(69px, 9999px, 31px, 0);
+  }
+  40% {
+    clip: rect(6px, 9999px, 72px, 0);
+  }
+  45% {
+    clip: rect(25px, 9999px, 35px, 0);
+  }
+  50% {
+    clip: rect(82px, 9999px, 26px, 0);
+  }
+  55% {
+    clip: rect(7px, 9999px, 92px, 0);
+  }
+  60% {
+    clip: rect(54px, 9999px, 30px, 0);
+  }
+  65% {
+    clip: rect(86px, 9999px, 90px, 0);
+  }
+  70% {
+    clip: rect(38px, 9999px, 65px, 0);
+  }
+  75% {
+    clip: rect(41px, 9999px, 66px, 0);
+  }
+  80% {
+    clip: rect(31px, 9999px, 37px, 0);
+  }
+  85% {
+    clip: rect(8px, 9999px, 12px, 0);
+  }
+  90% {
+    clip: rect(50px, 9999px, 69px, 0);
+  }
+  95% {
+    clip: rect(7px, 9999px, 42px, 0);
+  }
+  100% {
+    clip: rect(14px, 9999px, 57px, 0);
+  }
+}
+.glitch:after {
+  content: attr(data-text);
+  position: absolute;
+  left: 2px;
+  text-shadow: -1px 0 red;
+  top: 0;
+  color: white;
+  background: black;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim 2s infinite linear alternate-reverse;
+}
+
+@keyframes noise-anim-2 {
+  0% {
+    clip: rect(18px, 9999px, 13px, 0);
+  }
+  5% {
+    clip: rect(74px, 9999px, 51px, 0);
+  }
+  10% {
+    clip: rect(33px, 9999px, 65px, 0);
+  }
+  15% {
+    clip: rect(64px, 9999px, 66px, 0);
+  }
+  20% {
+    clip: rect(75px, 9999px, 6px, 0);
+  }
+  25% {
+    clip: rect(40px, 9999px, 49px, 0);
+  }
+  30% {
+    clip: rect(71px, 9999px, 1px, 0);
+  }
+  35% {
+    clip: rect(42px, 9999px, 73px, 0);
+  }
+  40% {
+    clip: rect(92px, 9999px, 57px, 0);
+  }
+  45% {
+    clip: rect(4px, 9999px, 33px, 0);
+  }
+  50% {
+    clip: rect(4px, 9999px, 34px, 0);
+  }
+  55% {
+    clip: rect(49px, 9999px, 25px, 0);
+  }
+  60% {
+    clip: rect(24px, 9999px, 44px, 0);
+  }
+  65% {
+    clip: rect(31px, 9999px, 99px, 0);
+  }
+  70% {
+    clip: rect(54px, 9999px, 83px, 0);
+  }
+  75% {
+    clip: rect(57px, 9999px, 97px, 0);
+  }
+  80% {
+    clip: rect(3px, 9999px, 15px, 0);
+  }
+  85% {
+    clip: rect(84px, 9999px, 34px, 0);
+  }
+  90% {
+    clip: rect(100px, 9999px, 88px, 0);
+  }
+  95% {
+    clip: rect(91px, 9999px, 59px, 0);
+  }
+  100% {
+    clip: rect(10px, 9999px, 87px, 0);
+  }
+}
+.glitch:before {
+  content: attr(data-text);
+  position: absolute;
+  left: -2px;
+  text-shadow: 1px 0 blue;
+  top: 0;
+  color: white;
+  background: black;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim-2 3s infinite linear alternate-reverse;
+}
+
+
 
     #mainv img {
         width: 900px;
@@ -156,9 +323,10 @@ body{
 .test{
        
         
-        width: 800px;
+        width: 100%;
         margin: 0 auto;
       text-align: center;
+ 
     }
 
 
@@ -167,14 +335,14 @@ body{
         font-family: 'kokoro';
         line-height: 120px;
         text-align: center;
-
+   padding-bottom: 170px;
     }
 }
 .tumo{
     margin: 0 auto;
-    margin-bottom:-20px;
+    margin-bottom:-120px;
     text-align: center;
-    margin-top: -500px;
+    margin-top: -680px;
     overflow: hidden;
     
 }
@@ -342,14 +510,14 @@ letter-spacing:5px;
     .rellax1{
      
         position: absolute;
-        top:-500px;
+        top:-360px;
         left:740px;
          z-index: 100px;
     }
      .rellax1 img{
  width: 30vw;
          min-width: 170px;
-            max-width: 370px;
+            max-width: 470px;
         
     }
 .rellax2 img{
@@ -449,6 +617,7 @@ font-size:2vw;
         top:4100px;
         position: absolute;}
 }
+ 
 
 @media screen and (max-width: 1000px) { 
 
@@ -459,7 +628,7 @@ font-size:2vw;
 
     .tatea p{  display: none;}
     .tatem p{  display: none;}
-    .rellax1{  display: none;}
+  
 }
     
 
@@ -469,65 +638,54 @@ font-size:2vw;
   }
 
 /* ポップアップウインドウの設定 */
-.popup {
-  background-color: #efefef;
- 
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  width: 70vw;
-  height: 55vw;
-  overflow-y: scroll;
-}
-/* チェックボックスの初期設定 */
-#popup-on{
-  display: none;
-}
-/* チェックされたらポップアップウインドウを開く */
-#popup-on:checked + .popup{
-  display: block;
+button{
+  
+    
+       width: auto;
+    padding:0;
+    margin:0;
+    background: #DDDDDD;
+   
+    border:0;
+    font-size:0;
+    line-height:0;
+    overflow:visible;
+    cursor:pointer;
+    
 }
 
-/* 閉じるアイコン（右上） */
-.icon-close{
-  background: #000;
-  color: #fff;
-  font-size: 30px;
-  padding: 0 10px;
-  position: absolute;
-  right: 0;
+
+button img{display: block;}
+.element_to_pop_up { 
+    background-color:#fff;
+    border-radius:15px;
+    color:#000;
+    display:none; 
+    padding:20px;
+    max-width:600px;
+   max-height: 600px;
+      overflow-y: scroll;
+}
+.b-close{
+    cursor:pointer;
+    position:absolute;
+    right:10px;
+    top:5px;
 }
 
-/* 閉じるボタン */
-.btn-close{
-  background: #000;
-  border-radius: 10px;
-  color: #fff;
-  padding: 10px;
-  cursor: pointer;
-  margin: 10px auto;
-  width: 95%;
-  text-align: center;
-}
 
-/* 開くボタン */
-.btn-open{
- 
-  border-radius: 10px;
-  color: #fff;
-  padding: 10px;
-  cursor: pointer;
-  margin: 10px auto;
-  width: 95%;
-  text-align: center;
-}
 
-/* ポップアップの内容 */
-.popup-content{
-  margin: 40px auto 40px auto;
-  width: 90%;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
