--- a/omoide_s.css
+++ b/omoide_s.css
@@ -660,67 +660,27 @@ h1 {
 }
 
 /* ポップアップウインドウの設定 */
-.popup {
-    background-color: #efefef;
 
-    display: none;
-    position: fixed;
-    top: 10;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    width: 70vw;
-    height: 55vw;
-    overflow-y: scroll;
+button{
+    padding: 0;
+    border: none;
+    background: transparent;
+    
 }
-
-/* チェックボックスの初期設定 */
-#popup-on {
-    display: none;
+button img{display: block;}
+.element_to_pop_up { 
+    background-color:#fff;
+    border-radius:15px;
+    color:#000;
+    display:none; 
+    padding:20px;
+    max-width:600px;
+   max-height: 600px;
+      overflow-y: scroll;
 }
-
-/* チェックされたらポップアップウインドウを開く */
-#popup-on:checked + .popup {
-    display: block;
-}
-
-/* 閉じるアイコン（右上） */
-.icon-close {
-    background: #000;
-    color: #fff;
-    font-size: 30px;
-    padding: 0 10px;
-    position: absolute;
-    right: 0;
-}
-
-/* 閉じるボタン */
-.btn-close {
-    background: #000;
-    border-radius: 10px;
-    color: #fff;
-    padding: 10px;
-    cursor: pointer;
-    margin: 10px auto;
-    width: 95%;
-    text-align: center;
-}
-
-/* 開くボタン */
-.btn-open {
-
-
-
-
-    cursor: pointer;
-    margin: 3px auto;
-    width: 90%;
-    text-align: center;
-}
-
-/* ポップアップの内容 */
-.popup-content {
-    margin: 40px auto 40px auto;
-    width: 90%;
+.b-close{
+    cursor:pointer;
+    position:absolute;
+    right:10px;
+    top:5px;
 }
