--- a/omoide.css
+++ b/omoide.css
@@ -21,6 +21,50 @@
     }
 
 
+
+
+
+/*loading*/
+
+#loading{
+    position: absolute;
+    top: 50%;
+        left: 50%;
+        -webkit-transform: translateY(-50%) translateX(-50%);
+        transform: translateY(-50%) translateX(-50%);
+        margin-top: 30px;
+  }
+      
+#loader-bg {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    background: #00FF00;
+    z-index: 1;
+    
+ }
+ 
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     html {
         background-color: #fff;
         font-size: 30px;
@@ -41,8 +85,14 @@
 
 
 
+a{font-size: 16px;
+text-decoration: none;
+    color: #18BC3B;
+}
 
-
+a:hover{
+    color: black;
+}
 
 body{
     overflow-x: hidden;
@@ -65,6 +115,8 @@ body{
 
     }
 
+li a{font-size: 29.5px;
+ color: gray;}
     .menu {
         width: 600px;
         margin: auto 0;
@@ -497,7 +549,7 @@ button{
 
 
 button img{display: block;}
-.element_to_pop_up { 
+.element_to_pop_up1 { 
     background-color:#fff;
     border-radius:15px;
     color:#000;
@@ -505,7 +557,69 @@ button img{display: block;}
     padding:20px;
     max-width:600px;
    max-height: 600px;
+    text-align: center;
       overflow-y: scroll;
+    font-family: "kokoro";
+}
+.element_to_pop_up2 { 
+    background-color:#fff;
+    border-radius:15px;
+    color:#000;
+    display:none; 
+    padding:20px;
+    max-width:600px;
+   max-height: 600px;
+    text-align: center;
+      overflow-y: scroll;
+    font-family: "kokoro";
+}
+.element_to_pop_up3{ 
+    background-color:#fff;
+    border-radius:15px;
+    color:#000;
+    display:none; 
+    padding:20px;
+    max-width:600px;
+   max-height: 600px;
+    text-align: center;
+      overflow-y: scroll;
+    font-family: "kokoro";
+}
+.element_to_pop_up4 { 
+    background-color:#fff;
+    border-radius:15px;
+    color:#000;
+    display:none; 
+    padding:20px;
+    max-width:600px;
+   max-height: 600px;
+    text-align: center;
+      overflow-y: scroll;
+    font-family: "kokoro";
+}
+.element_to_pop_up5{ 
+    background-color:#fff;
+    border-radius:15px;
+    color:#000;
+    display:none; 
+    padding:20px;
+    max-width:600px;
+   max-height: 600px;
+    text-align: center;
+      overflow-y: scroll;
+    font-family: "kokoro";
+}
+.element_to_pop_up6 { 
+     background-color:#fff;
+    border-radius:15px;
+    color:#000;
+    display:none; 
+    padding:20px;
+    max-width:600px;
+   max-height: 600px;
+    text-align: center;
+      overflow-y: scroll;
+    font-family: "kokoro";
 }
 .b-close{
     cursor:pointer;
@@ -515,9 +629,11 @@ button img{display: block;}
 }
 
 
+.muchiicon{margin: 20px;}
+.icon{margin-right: -20px;
+margin-bottom: -10px;}
 
-
-
+.muchi1{margin-top: 20px;}
 
 .guri{
   display: block;
