--- a/omoide_s.css
+++ b/omoide_s.css
@@ -679,21 +679,103 @@ h1 {
 /* ポップアップウインドウの設定 */
 
 button{
-    padding: 0;
-    border: none;
-    background: transparent;
+   
+       width: auto;
+    padding:0;
+    margin:0;
+    background: #DDDDDD;
+   
+    border:0;
+    font-size:0;
+    line-height:0;
+    overflow:visible;
+    cursor:pointer;
+        margin: 0 auto;
     
 }
+
 button img{display: block;}
-.element_to_pop_up { 
+.element_to_pop_up1 { 
     background-color:#fff;
     border-radius:15px;
     color:#000;
     display:none; 
     padding:20px;
-    max-width:300px;
+       max-width:350px;
    max-height: 600px;
+     width: 100%;
+    text-align: center;
       overflow-y: scroll;
+    font-family: "kokoro";
+    margin: 0 auto;
+}
+.element_to_pop_up2 { 
+    background-color:#fff;
+    border-radius:15px;
+    color:#000;
+    display:none; 
+    padding:20px;
+      max-width:350px;
+   max-height: 600px;
+     width: 100%;
+    text-align: center;
+      overflow-y: scroll;
+    font-family: "kokoro";
+}
+.element_to_pop_up3{ 
+    background-color:#fff;
+    border-radius:15px;
+    color:#000;
+    display:none; 
+    padding:20px;
+    max-width:350px;
+   max-height: 600px;
+     width: 100%;
+    text-align: center;
+      overflow-y: scroll;
+    font-family: "kokoro";
+    width: 100%;
+
+}
+.element_to_pop_up4 { 
+    background-color:#fff;
+    border-radius:15px;
+    color:#000;
+    display:none; 
+    padding:20px;
+      max-width:350px;
+   max-height: 600px;
+     width: 100%;
+    text-align: center;
+      overflow-y: scroll;
+    font-family: "kokoro";
+}
+.element_to_pop_up5{ 
+    background-color:#fff;
+    border-radius:15px;
+    color:#000;
+    display:none; 
+    padding:20px;
+     max-width:350px;
+   max-height: 600px;
+     width: 100%;
+    text-align: center;
+      overflow-y: scroll;
+    font-family: "kokoro";
+}
+.element_to_pop_up6 { 
+     background-color:#fff;
+    border-radius:15px;
+    color:#000;
+    display:none; 
+    padding:20px;
+    max-width:350px;
+ 
+   max-height: 600px;
+     width: 100%;
+    text-align: center;
+      overflow-y: scroll;
+    font-family: "kokoro";
 }
 .b-close{
     cursor:pointer;
@@ -701,6 +783,32 @@ button img{display: block;}
     right:10px;
     top:5px;
 }
+
+
+.muchiicon{margin: 20px;}
+.icon{margin-right: -20px;
+margin-bottom: -10px;}
+
+.muchi1{margin-top: 20px;
+width: 200px;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 .sioham{ -webkit-filter: grayscale(1);
