--- a/omoide.css
+++ b/omoide.css
@@ -555,7 +555,7 @@ button img{display: block;}
     color:#000;
     display:none; 
     padding:20px;
-    max-width:600px;
+     width:600px;
    max-height: 600px;
     text-align: center;
       overflow-y: scroll;
@@ -568,7 +568,7 @@ button img{display: block;}
     color:#000;
     display:none; 
     padding:20px;
-    max-width:600px;
+     width:600px;
    max-height: 600px;
     text-align: center;
       overflow-y: scroll;
@@ -580,7 +580,7 @@ button img{display: block;}
     color:#000;
     display:none; 
     padding:20px;
-    max-width:600px;
+      width:600px;
    max-height: 600px;
     text-align: center;
       overflow-y: scroll;
@@ -592,7 +592,7 @@ button img{display: block;}
     color:#000;
     display:none; 
     padding:20px;
-    max-width:600px;
+     width:600px;
    max-height: 600px;
     text-align: center;
       overflow-y: scroll;
@@ -604,7 +604,7 @@ button img{display: block;}
     color:#000;
     display:none; 
     padding:20px;
-    max-width:600px;
+     width:600px;
    max-height: 600px;
     text-align: center;
       overflow-y: scroll;
@@ -616,8 +616,8 @@ button img{display: block;}
     color:#000;
     display:none; 
     padding:20px;
-    max-width:600px;
-   max-height: 600px;
+   width:600px;
+   width:600px;
     text-align: center;
       overflow-y: scroll;
     font-family: "kokoro";
