--- a/omoide.css
+++ b/omoide.css
@@ -36,13 +36,15 @@
   }
       
 #loader-bg {
+     margin-bottom: 200px;
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 102%;
+    height: 102%;
     top: 0px;
     left: 0px;
     background: #00FF00;
     z-index: 1;
+   
     
  }
  
