--- a/omoide_s.css
+++ b/omoide_s.css
@@ -651,14 +651,12 @@ overflow-x: hidden;
 
 
 
-
-
 /*kousin*/
 
 #ham-menu a {
     font-family: color: #00FF00;
     font-size: 25px;
-      font-family: 'dot';
+      font-family: 'arial narrow';
     text-decoration: none;
     color: #DDDDDD;
     padding-top: 30px;
@@ -703,7 +701,7 @@ button img{display: block;}
     display:none; 
     padding:20px;
    width:350px;
-   max-height: 600px;
+  height: 450px;
     text-align: center;
       overflow-y: scroll;
     font-family: "kokoro";
@@ -716,7 +714,7 @@ button img{display: block;}
     display:none; 
     padding:20px;
    width:350px;
-   max-height: 600px;
+     height: 450px;
     text-align: center;
       overflow-y: scroll;
     font-family: "kokoro";
@@ -728,7 +726,7 @@ button img{display: block;}
     display:none; 
     padding:20px;
    width:350px;
-   max-height: 600px;
+     height: 450px;
     text-align: center;
       overflow-y: scroll;
     font-family: "kokoro";
@@ -742,7 +740,7 @@ button img{display: block;}
     display:none; 
     padding:20px;
       max-width:350px;
-   max-height: 600px;
+ height: 450px;
     text-align: center;
       overflow-y: scroll;
     font-family: "kokoro";
@@ -754,7 +752,7 @@ button img{display: block;}
     display:none; 
     padding:20px;
     width:350px;
-   max-height: 600px;
+    height: 450px;
     text-align: center;
       overflow-y: scroll;
     font-family: "kokoro";
@@ -767,7 +765,7 @@ button img{display: block;}
     padding:20px;
 width:350px;
  
-   max-height: 600px;
+height: 450px;
     text-align: center;
       overflow-y: scroll;
     font-family: "kokoro";
@@ -1001,3 +999,29 @@ margin-top:-200px;
 }
 
 
+
+
+
+
+
+#loading{
+    position: absolute;
+    top: 50%;
+        left: 50%;
+        -webkit-transform: translateY(-50%) translateX(-50%);
+        transform: translateY(-50%) translateX(-50%);
+        margin-top: 30px;
+  }
+      
+#loader-bg {
+   
+    position: fixed;
+    width: 104%;
+    height: 110%;
+    top: 0px;
+    left: 0px;
+    background: #00FF00;
+    z-index: 1;
+   
+    
+ }
