--- a/omoide.css
+++ b/omoide.css
@@ -53,7 +53,14 @@
 
 
 
-
+button{
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        outline: none;
+        padding: 0;
+        appearance: none;
+}
 
 
 
