--- a/omoide.css
+++ b/omoide.css
@@ -247,7 +247,7 @@ li a{font-size: 29.5px;
 }
 
     /*menber*/
-    #menber {
+    #member {
         background-color: #DDDDDD;
         padding-top: 200px;
     }
