--- a/omoide.css
+++ b/omoide.css
@@ -33,6 +33,7 @@
         -webkit-transform: translateY(-50%) translateX(-50%);
         transform: translateY(-50%) translateX(-50%);
         margin-top: 30px;
+    margin-right: 10px;
   }
       
 #loader-bg {
@@ -624,13 +625,13 @@ button img{display: block;}
     font-family: "kokoro";
 }
 .element_to_pop_up6 { 
-     background-color:#fff;
+    background-color:#fff;
     border-radius:15px;
     color:#000;
     display:none; 
     padding:20px;
-   width:600px;
-   width:600px;
+     width:600px;
+   max-height: 600px;
     text-align: center;
       overflow-y: scroll;
     font-family: "kokoro";
